--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,8 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node index.js",
-      "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "start": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
